# comm-node

./: CLAUDE.md  Cargo.toml  RAW-NOTES.md  comm-node.example.toml
src/: artifact.rs  config.rs  event.rs  lib.rs  lock.rs  main.rs  orchestrator.rs  protocol_template.md  router.rs  scaffold.rs  types.rs  watcher.rs
